--- a/gate/src/main/resources/templates/message.html
+++ b/gate/src/main/resources/templates/message.html
@@ -22,7 +22,13 @@
     <link rel="stylesheet" href="/tao/mine.css">
     <script src="/tao/config.js"></script>
 </head>
-<body>
+<body  background="/assets/img/gallery/section_bg04.jpg">
+<!--              前置渲染js              -->
+<script th:inline="javascript">
+    let tokenSign = [[${token}]];
+    if (tokenSign != null && tokenSign.length > 20)
+        window.sessionStorage.setItem('token', JSON.stringify(tokenSign));
+</script>
 <!-- Preloader Start -->
 <div id="preloader-active">
     <div class="preloader d-flex align-items-center justify-content-center">
@@ -53,7 +59,7 @@
                             <div class="main-menu f-right d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a href="/index">首页</a></li>
+                                        <li><a href="/index" id="url03">首页</a></li>
                                         <li><a href="/resource">资源</a></li>
                                         <li><a href="/followed/token">关注</a></li>
                                         <li><a href="/news/token">消息</a></li>
