--- a/gate/src/main/resources/templates/index.html
+++ b/gate/src/main/resources/templates/index.html
@@ -273,6 +273,7 @@
                 })
             } else {
                 alert("请先登录")
+                window.location.href = "/login";
             }
         })
         $(".comments").click(function () {
@@ -287,6 +288,7 @@
                 }
             } else {
                 alert("请先登录")
+                window.location.href = "/login";
             }
         })
         $(".btn-primary").click(function () {
@@ -320,6 +322,7 @@
 
             } else {
                 alert("请先登录")
+                window.location.href = "/login";
             }
         })
     })
