添加访问量功能

--- a/gate/src/main/resources/templates/blog.html
+++ b/gate/src/main/resources/templates/blog.html
@@ -78,6 +78,7 @@
                             <script> navStarter() </script>
                         </div>
                     </div>
+                    <span style="font-size: xx-small;color: darkgrey" th:text="'访问量:'+${visitorNum}"></span>
                     <!-- Mobile Menu -->
                     <div class="col-12">
                         <div class="mobile_menu d-block d-lg-none"></div>
